--- a/blog-post.html
+++ b/blog-post.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Blog Post</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  </head>
-  <body>
-    <section id="header"></section>
-    <section id="main"></section>
-  </body>
+<html lang="en">
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
+<style>
+    @import 'index.css';
+</style>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="banner">
+        <a class="title-header" href="./index.html">Ski the East!</a>
+        <h2>Take your gravity fed smiles to new heights - blog post only<h2>
+    </div>
+    <hr class="large-hr">
+    <hr class="large-hr">
+
+    <div class="blog-container">
+        <div class="blog-only">
+            <h1 class="header">This is a Blog Post Only</h1>
+            <img class="large-image" src="./blueskyday.jpg" alt="Groomed Ski Slope">
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid natus rem nisi at distinctio
+                numquam eum mollitia veritatis, excepturi velit. Minima aperiam aliquid maxime tempora non, quo
+                reiciendis repellendus iure exercitationem, dolor veritatis alias nesciunt eaque dicta
+                blanditiis voluptatum cumque maiores eos natus voluptatem fugiat modi facilis! Facere officia
+                maiores repellat? Corrupti aliquam sint excepturi amet iste tenetur ex itaque eligendi
+                blanditiis ea. Recusandae ex ducimus dicta tenetur totam praesentium eveniet laborum ipsum, sunt
+                assumenda facere nulla doloribus dolores qui repudiandae quaerat sapiente. Ducimus qui adipisci
+                commodi quo id iusto maiores odit, numquam praesentium distinctio, fugiat, est aperiam error!
+                Illum repellat, magnam nemo nam nobis omnis sint. Obcaecati aspernatur distinctio libero
+                quisquam magni? Incidunt eum facilis dignissimos aspernatur reiciendis mollitia officia unde!
+                Natus incidunt veritatis exercitationem molestiae quis nostrum, possimus, debitis esse et,
+                cumque nam explicabo laudantium quia eveniet! Aliquam nihil dolores veniam expedita dolore
+                tenetur nam odio, quaerat esse assumenda autem a neque voluptatibus magnam dolor eum voluptatem
+                quibusdam dicta, et minus! Reprehenderit harum ipsam porro officia hic voluptate enim beatae
+                consequatur ipsa. Esse minus omnis earum tempora vitae sed ut ratione, sapiente voluptates
+                dignissimos eum corporis soluta incidunt magnam eligendi temporibus corrupti quibusdam voluptas,
+                quas debitis consequatur placeat. Eius tempora excepturi velit natus, fugiat rem voluptatem?
+                Numquam facere a voluptas adipisci velit quos commodi illo voluptates repudiandae eligendi aut
+                minima delectus, cumque, quam hic voluptatem officia. Tempora itaque quidem eveniet
+                reprehenderit dignissimos ut assumenda, qui amet rem, iusto ipsa recusandae consequuntur.
+                Facere, iste. Aspernatur eum ipsum quaerat eveniet sed nostrum, voluptatem numquam tenetur
+                consequuntur accusantium quae hic praesentium incidunt maxime libero commodi iste ducimus
+                perferendis temporibus fuga eius, deserunt recusandae eligendi quo. Cum sed magnam adipisci sunt
+                non, quis est, voluptatem eaque officiis dolorem, culpa ipsam explicabo vero veritatis possimus
+                incidunt? Libero, ratione. Libero, quaerat deleniti dolor similique ratione enim quo? Distinctio
+                praesentium animi et, sapiente sed exercitationem rerum sequi earum odit, perspiciatis nihil
+                harum aut ipsa aspernatur ducimus officiis quo, esse dignissimos labore provident ipsam cumque
+                quas cupiditate atque. Illum, laudantium! Reiciendis non distinctio adipisci, expedita a
+                blanditiis ea nobis cumque esse beatae eligendi ad consequatur quisquam dolore, corporis,
+                doloribus culpa dicta earum necessitatibus ipsam? Repellendus nesciunt libero praesentium
+                voluptate officia consequatur dolore iure cumque reiciendis. Eligendi omnis exercitationem,
+                libero possimus nihil aliquam voluptatem dolorum nobis repellendus numquam maiores, facere fuga
+                mollitia culpa magni temporibus expedita atque? Quae eligendi architecto quisquam enim fugit
+                iste dolore fugiat sequi! Nulla sed amet beatae voluptatibus eligendi dolorem possimus
+                similique, temporibus nam quos sapiente esse assumenda hic illo atque fugit harum corrupti,
+                voluptatem placeat iusto repellat eaque. Fuga aut quis veniam eum, quidem, omnis architecto iste
+                aperiam laboriosam voluptatum neque reiciendis iusto numquam perspiciatis voluptas? Possimus
+                amet cupiditate ipsam aliquid vel dignissimos quaerat, repudiandae tenetur repellendus esse
+                architecto recusandae eligendi dolore eum nihil iste voluptatem mollitia enim saepe quae velit?
+                Blanditiis autem cupiditate soluta, laborum ad reprehenderit facere est tenetur. Tempora, odit
+                veritatis porro similique tenetur quasi inventore quidem eum. Aliquid nihil cumque voluptates
+                ipsam debitis perferendis doloremque! Perferendis, quos animi.</p>
+        </div>
+    </div>
+
+    <div id="contact-wrapper">
+        <p id="contact-heading">Questions or Comments? Get in Touch</p>
+        <form id="contact-form">
+            <input type="text" id="contact-name" name="user_name" placeholder="Name">
+            <input type="text" id="contact-email" name="user_email" placeholder="E-mail">
+            <textarea id="msg" name="contact-message" placeholder="Tell us your story"></textarea>
+        </form>
+        <a id="send-message" class="action-button" href="www.sugarbush.com">send message</a>
+        <p id="contact-intro">We love to hear about your gravity fed smiles. Send us a message and tell us about your
+            latest adventure!</p>
+        <div id="contact-address">
+            <p>420 Powder Way</p>
+            <p>Killington, VT 05751</p>
+            <p>1-802-Snow-Day</p>
+            <p>johnnybgood@hotmail.com</p>
+        </div>
+        <div id="contact-social">
+            <p>instagram.com</p>
+            <p>facebook.com</p>
+            <p>linkedin.com</p>
+            <p>twitter.com</p>
+        </div>
+    </div>
+
 </html>
