--- a/index.html
+++ b/index.html
@@ -1,14 +1,125 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>Mockup Home</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  </head>
-  <body>
-    <section id="header"></section>
-    <section id="features"></section>
-    <section id="main"></section>
-    <section id="footer"></section>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
+<style>
+    @import 'index.css';
+</style>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="banner">
+        <a class="title-header" href="./index.html">Ski the East!</a>
+        <h2>Take your gravity fed smiles to new heights - home<h2>
+    </div>
+    <hr class="large-hr">
+    <hr class="large-hr">
+    <p class="sub-banner">Here's a glipse of how New England will make you grin!</p>
+    <div class="image-pane">
+        <div>
+            <img class="small-image" src="treejump.jpg" alt="Groomed Ski Slope">
+            <p>Major Tom to Ground Control</p>
+        </div>
+        <div>
+            <img class="small-image" src="blueskyday.jpg" alt="Groomed Ski Slope">
+            <p>Corduroy heaven!</p>
+        </div>
+        <div>
+            <img class="small-image" src="./powderdaze.jpg" alt="Powder day Pic">
+            <p>powder daze!!</p>
+        </div>
+
+    </div>
+
+    <p class="action-button centered">
+        <a href="www.killington.com">tell me more</a>
+    </p>
+
+    <div class="section-quote">
+        <p id="powder-quote">My drug of choice is white powder!</p>
+    </div>
+
+    <div class="article-blog-container">
+        <div class="article">
+            <p class="header">1978 - The Grandaddy of winter storms!</p>
+            <img  class="home-image"    src="./blizzard78.jpg" alt="Pic of Blizzard of 1978">
+            <p>In 1978, a nor'easter parked itself off of the new england coast and dumped copious amounts of snow. The
+                entire region was buried in white, catching many folks off-guard and stranding thousands
+                .</p>
+            <a class="action-button" href="./continue-reading.html">continue reading</a>
+            <p class="header">1993 - Storm of the Century!<p>
+                    <img class="home-image" src="./stormofcentury.jpg" alt="Pic of 1993 Super Storm">
+                    <p>The storm of the century was a huge winter cyclone that barreled up the eastern seaboard. Snow
+                        fell from
+                        northen
+                        Florida to Maine. Snow totals exceeded 3 feet in the most fortunate areas.</p>
+                    <a class="action-button" href="./continue-reading.html">continue reading</a>
+        </div>
+        <div class="blog">
+            <p class="date-box">December 25, 2019</p>
+            <a class="header" href="./blog-post.html">Ho! Ho! Snow!</a>>
+            <p>The snow fell at a torrid pace through the night, dumping over 18 inches of
+                fresh powder on the upper mountain. It was the dry, sweep away variety of snow that when gravity
+                is added produces grins as wide as vermont!
+            </p>
+            <p class="date-box">January 1, 2020</p>
+            <a class="header" href="./blog-post.html">Resolution Time</a>>
+            <p>We, the people in order to form a more perfect union, do resolve that hence forth we
+                shall never pass up
+                a powder day. Whether Democrat, Republican, Libertarian or Vegetarian, we shant pass up
+                the bounty that
+                Mother Nature may bestow up on us. We'll ride the purple mountain majesty down to the
+                fruited grain
+                celebrating the freedom that is the USA!
+
+            </p>
+            <hr class="small-hr">
+            <hr class="small-hr">
+            <p class="header">Gobs of Snow!</p>
+            <p>The snow fell at a torrid pace through the night, dumping over 18 inches of
+                fresh powder on the upper mountain. It was the dry, sweep away variety of snow that is
+                easily stirred by
+                the rush that only graity can provide.
+            </p>
+            <a class="action-button" href="./learn-more.html">learn more</a>
+            <p class="header">Mashed Tater Day!</p>
+            <p>A perfect blue sky day...snow was fast in the morning and by mid-day it was mashed potato
+                heaven. Bumps
+                go big but with such a good base it was all mashed potatoes with no gravy!
+            </p>
+            <a class="action-button" href="./learn-more.html">learn more</a>
+        </div>
+    </div>
+
+    <div id="contact-wrapper">
+        <p id="contact-heading">Questions or Comments? Get in Touch</p>
+        <form id="contact-form">
+            <input type="text" id="contact-name" name="user_name" placeholder="Name">
+            <input type="text" id="contact-email" name="user_email" placeholder="E-mail">
+            <textarea id="msg" name="contact-message" placeholder="Tell us your story"></textarea>
+        </form>
+        <a id="send-message" class="action-button" href="www.sugarbush.com">send message</a>
+        <p id="contact-intro">We love to hear about your gravity fed smiles. Send us a message and tell us about your
+            latest adventure!</p>
+        <div id="contact-address">
+            <p>420 Powder Way</p>
+            <p>Killington, VT 05751</p>
+            <p>1-802-Snow-Day</p>
+            <p>johnnybgood@hotmail.com</p>
+        </div>
+        <div id="contact-social">
+            <p>instagram.com</p>
+            <p>facebook.com</p>
+            <p>linkedin.com</p>
+            <p>twitter.com</p>
+        </div>
+    </div>
+
 </html>
